# value_screener

./: ADD_TICKERS_PY.py  ADD_TICKERS_SUPPORT.sh  BUFFETT_LYNCH_MASTER_v3.sh  FAST_MASTER.sh  FIXED_VALUE_MASTER.sh  Makefile  README.md  SAFE_ADD_TICKERS.sh  VALUE_SCANNER_MASTER.sh  best_nasdaq.csv  both.csv  buys.csv  create_env.sh  daily.csv  dashboard.py  dashboard.py.bak  fix_csv.py  fix_csv_all.sh  fix_user_agent.py  lynch.csv  nasdaq_screen.csv  nasdaq_tickers.txt  nyse_screen.csv  nyse_tickers.txt  original_tickers.txt  parse_log.py  pyproject.toml  requirements.txt  results.csv  scores.csv  temp_core_fix.py  test.csv  test_tickers.txt  true_value.csv  watchlist.txt
data/: aame_only.csv  mega_caps.csv  nasdaq.txt  nasdaq_ftp.txt  nasdaq_tickers.csv  nasdaq_tickers.txt  nyse_ftp.csv  nyse_ftp.txt  nyse_tickers.txt  russell2000.txt  russell2000_tickers.csv  simple.csv  smallcaps.csv  test.csv  test3.csv  test_gems.csv  test_stocks.csv  test_tickers.csv  test_value.csv  value_test.csv
output/: _buffett.csv  aame_final.csv  nasdaq_gems.csv  nasdaq_screen_20260419_1939.csv
src/value_screener/: __init__.py  cli.broken.py  cli.py  cli.py.bak  cli.py.bak.ultimate  cli.py.save  core.py  core.py.bak  data_sources.py  scoring.py
src/value_screener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_core.py
